* Minor tweaks for non-chrome browsers * Fix action bar last child 60px gap

--- a/packages/vapor/scss/variables.scss
+++ b/packages/vapor/scss/variables.scss
@@ -23,7 +23,7 @@ $input-field-height: 34px;
 $input-field-max-width: 440px;
 $input-field-font-size: 15px;
 // Filter Box
-$filter-box-height: 32px;
+$filter-box-height: 34px;
 // Flat select
 $flat-select-option-size: 26px;
 // Header
